--- a/index.html
+++ b/index.html
@@ -8,11 +8,27 @@
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
+    <!-- Font Awesome pro CDN-->
+    <link href="https://kit-pro.fontawesome.com/releases/v5.15.4/css/pro.min.css" rel="stylesheet">
+
     <!-- Style Sheet -->
     <link rel="stylesheet" href="style/style.css">
-    <title>Milestone One Assignment</title>
+    <title>Milestone One - Assignment</title>
 </head>
 <body>
+
+    <main>
+
+        <!-- Banner Section -->
+        <section class="banner">
+            <div class="banner_content_wrapper">
+                <h1 class="banner_title">All Thinks Are Possible If You believe</h1>
+                <p class="banner_description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                <a href="#" class="banner_btn">Contact Us</a>
+            </div>
+        </section>
+
+    </main>
     
 </body>
 </html>
