About section added

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 
     <main>
 
-        <!-- Banner Section -->
+        <!-- Banner Section Start -->
+
         <section class="banner">
             <div class="banner_content_wrapper">
                 <h1 class="banner_title">All Thinks Are Possible If You believe</h1>
@@ -27,6 +28,38 @@
                 <a href="#" class="banner_btn">Contact Us</a>
             </div>
         </section>
+
+        <!-- Banner Section End -->
+
+
+        <!-- About Section Start -->
+
+        <section class="about pt_130">
+            <div class="container">
+                <div class="about_content_wrapper">
+
+                    <div class="about_image_col">
+                        <img src="./assets/images/person.png" alt="">
+                    </div>
+
+                    <div class="about_text_col">
+                        <h2 class="about_title">My failures of<br> previous year</h2>
+                        <p class="about_description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+
+                    <ul class="failur_list">
+                        <li><i class="fal fa-check"></i> Contrary to popular belief, is not simply.</li>
+                        <li><i class="fal fa-check"></i> Contrary to popular belief.</li>
+                        <li><i class="fal fa-check"></i> Contrary to popular , is not simply.</li>
+                        <li><i class="fal fa-check"></i> Contrary to popular belief, is not simply.</li>
+                        <li><i class="fal fa-check"></i> Contrary to popular simply.</li>
+                    </ul>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+        <!-- About Section End -->
 
     </main>
     
