Plan section added

--- a/index.html
+++ b/index.html
@@ -61,6 +61,49 @@
 
         <!-- About Section End -->
 
+
+        <!-- Plan Section Start -->
+
+        <section class="plan pt_130">
+            <div class="container">
+                <h2 class="plan_section_title">My Plans</h2>
+
+                <div class="plans_wrapper">
+
+                    <div class="plan_box">
+                        <img src="./assets/icons/web.png" alt="" class="plan_image">
+                        <h3 class="plan_title">Web Development</h3>
+                        <p class="plan_details">I want to start</p>
+                    </div>
+                    <div class="plan_box">
+                        <img src="./assets/icons/js.png" alt="" class="plan_image">
+                        <h3 class="plan_title">Javascript</h3>
+                        <p class="plan_details">I want to learn</p>
+                    </div>
+                    <div class="plan_box">
+                        <img src="./assets/icons/smoke.png" alt="" class="plan_image">
+                        <h3 class="plan_title">Smoking Habit</h3>
+                        <p class="plan_details">I want to end</p>
+                    </div>
+                    <div class="plan_box">
+                        <img src="./assets/icons/ecom.png" alt="" class="plan_image">
+                        <h3 class="plan_title">ecommerce</h3>
+                        <p class="plan_details">I want to develop</p>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+        <!-- Plan Section End -->
+
+
+        <!-- CAT Section Start -->
+
+        <section class="cat"></section>
+
+        <!-- CAT Section End -->
+
     </main>
     
 </body>
