CTA section added

--- a/index.html
+++ b/index.html
@@ -98,11 +98,18 @@
         <!-- Plan Section End -->
 
 
-        <!-- CAT Section Start -->
+        <!-- CTA Section Start -->
 
-        <section class="cat"></section>
+        <section class="cta">
+            <div class="container">
+                <div class="cta_content_wrapper">
+                    <h2 class="cta_title">Awlays keep a positive mindset</h2>
+                    <a href="#" class="cta_btn">Call Now</a>
+                </div>
+            </div>
+        </section>
 
-        <!-- CAT Section End -->
+        <!-- CTA Section End -->
 
     </main>
     
