--- a/index.html
+++ b/index.html
@@ -111,6 +111,38 @@
 
         <!-- CTA Section End -->
 
+
+        <!-- Footer Section Start -->
+
+        <footer>
+            <div class="container">
+                <div class="footer_content_wrapper">
+                    <div class="footer_content">
+                        <h2 class="footer_title">Future</h2>
+                        <p class="footer_details mb_24">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                        <p class="footer_details">Email : info@gmail.com</p>
+                        <p class="footer_details">Phone : 01500 00 00 00</p>
+
+                        <ul class="social_media">
+                            <li><img src="./assets/icons/fb.png" alt=""></li>
+                            <li><img src="./assets/icons/twitter.png" alt=""></li>
+                            <li><img src="./assets/icons/youtube.png" alt=""></li>
+                        </ul>
+                        
+                    </div>
+                    <div class="newsletter">
+                        <h3 class="newsletter_title">Subscribe</h3>
+                        <form action="#">
+                            <input type="email" name="" id="nl_email" placeholder="Enter Your Email">
+                            <input type="submit" class="nl_submit_btn" value="Subscribe">
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
+        <!-- Footer Section End -->
+
     </main>
     
 </body>
